# echo-os

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  ECHO.ROADMAP.md  README.md  RELEASE_NOTES.md  STORY_BIBLE.md  cyberpunk_dreams_v2.json  echo.db  pyproject.toml  test_prompts.txt
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml
artifacts/2025-10-17/dummy/: echo_1760654534.txt  meta.json
echo-os-tool/: README.md  render_reel.py  requirements.txt
frequency/: cyberpunk_dreams_v2_golge_protokolu.json  cyberpunk_love_romance.json  ikinci_dongu_mystical.json  muhur_protokolu_sacred.json  neon_awakening_digital.json  profile.json  seferverse_s01e01_cyberpunk_neon.json  seferverse_s01e02_cyberpunk_romance.json  seferverse_s02e00_cyberpunk_dawn.json
prompts/: cyberpunk_dreams_v2_golge_protokolu.csv  cyberpunk_love_story.csv  example_story.csv  ikinci_dongu_v3.csv  lighthouse_story.csv  muhur_protokolu_v4.csv  neon_awakening_story.csv  nft_collection_10.txt  nft_test_3.txt  seferverse_s01e01_ayla_vs_rex.csv  seferverse_s01e02_neon_hearts.csv  seferverse_s02e00_afterlight_protocol.csv  warm_fractal.txt
scripts/: labels.sh
src/echo_os/: __init__.py  app.py  cli.py  config.py  echo.py  executor.py  models.py  openai_client.py  planner.py  store.py
src/echo_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/echo_os/adapters/: __init__.py  resonance.py
src/echo_os/artifacts/: __init__.py  storage.py
src/echo_os/routers/: __init__.py  api.py  captions.py  pipeline.py  render.py  video.py
tests/: test_smoke.py
(+58 files in other folders)
