[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-os"
version = "0.1.0"
description = "Personal mini-OS: Echo Protocol — intent→plan→task with OpenAI integration"
authors = [{ name = "Onur" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlmodel>=0.0.16",
  "aiosqlite>=0.19",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "openai>=1.47",
  "apscheduler>=3.10",
  "rich>=13.7",
  "typer>=0.9"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
